--- a/portafolios/package.json
+++ b/portafolios/package.json
@@ -20,6 +20,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.9.4",
     "simple-icons": "^15.18.0",
     "tailwindcss": "^4.1.15"
   },
